<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="false">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.android.ipshita.bookstore.MainActivity"
        android:orientation="vertical">
   <RelativeLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="300dp"
       tools:context="com.android.ipshita.bookstore.MainActivity">
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:src="@drawable/books"
           android:scaleType="centerCrop"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/maintitle"
           android:layout_centerHorizontal="true"
           android:textSize="36sp"
           android:textColor="@android:color/white"
           android:fontFamily="serif"
           android:layout_marginTop="100dp"/>
   </RelativeLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:textSize="25sp"
        android:padding="16dp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="0"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:padding="16dp"
        android:text="@string/desc"/>
        <RelativeLayout
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp">
            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="Phone No. "
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/phone"
                android:layout_toRightOf="@id/title1"
                android:textColor="@android:color/black"
                />
            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="Email "
                android:textColor="@android:color/black"
                android:layout_below="@id/title1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/email"
                android:layout_toEndOf="@id/title2"
                android:layout_below="@id/title1"
                android:textColor="@android:color/black"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:text="Address "
                android:textColor="@android:color/black"
                android:layout_below="@id/title2"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/address"
                android:layout_toEndOf="@id/title3"
                android:layout_below="@id/title2"
                android:textColor="@android:color/black"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>